fix spacing issues

--- a/style.css
+++ b/style.css
@@ -66,12 +66,11 @@ table {
 #dashboard {
     display: flex;
     flex-direction: column;
-    grid-row-start: 1;
-    grid-column-end: 1;
+    grid-column-start: 1;
+    grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 6;
-    background-color: aqua;
-    grid-column-end: auto;
+    background-color: aqua; 
     min-height: 100vh;
     padding: 10px;
 }
@@ -127,26 +126,28 @@ nav {
 
 input {
   border-radius: 2rem;
+  border: none;
+  background-color: rgb(187, 187, 187);
 }
 
 .input1 {
   margin-left: 3rem;
   margin-right: 10vw;
-  width: 16rem;
+  width: 35rem;
 }
 
  .input2 {
   width: 8rem;
-  display: flex;
 }
 
  #first-name {
     width: fit-content;
     display: flex;
-    justify-content: flex-end;
+    justify-content:end;
     width:28vw;
     gap: 20px;
-    margin-left: 5rem;
+    padding-right: 2rem;
+    font-size: 2rem;
  }
 
  #full-name {
@@ -168,6 +169,8 @@ input {
     justify-content: flex-end;
     gap: 20px;
     font-size: 20px;
+    padding-right: 2rem;
+    margin-bottom: 1rem;
  }
 
  #projects {
@@ -188,9 +191,15 @@ input {
  }
 
  img {
-   height: 25px;
-   border-radius: 10px;
+   height: 30px;
+   width: 30px;
+   border-radius: 60px;
  }
+
+.smallImg {
+  height: 2rem;
+  width: 2rem;
+}
 
  .img2 {
    height: 70px;
